samples/_failures_safe/1761558075_e5c840_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beb702dd.c: In function ‘main’:
./samples/SAFE/__tmp_beb702dd.c:138:5: error: expected declaration or statement at end of input
  138 |     }
      |     ^
